# excel-parser-bot

./: .gitignore  README.md  laptop.db  main.py  pyproject.toml
bot/: db.py  handlers.py  utils.py
